# pymulakat-frontend

./: .deploy-marker  .deploy-trigger  .env.example  .gitignore  .rebuild-trigger  README.md  metadata.json  middleware.ts  next.config.mjs  package-lock.json  package.json  proxy.ts  vercel.json
backend/: .dockerignore  .env.example  .gitignore  .railway-trigger  Dockerfile  Procfile  RAILWAY.md  README.md  SUPABASE_SETUP.md  bulk_audit_js.py  dependencies.py  docker-compose.yml  main.py  pyproject.toml  question_loader.py  railway.json  railway.toml  requirements.txt  schemas.py
backend/data/: CURRICULUM.py  QUESTIONS-v3-legacy-broken.py  QUESTIONS-v3.csv  QUESTIONS-v3.json  QUESTIONS-v4.json.disabled  QUESTIONS-v4.py.disabled  QUESTIONS.py  QUESTIONS_FACTORY.csv  README.md  SEO_CONTENT.py  VIOLATIONS.txt  _add_10dp.py  _enrich_content.py  _fix_args.py  _generate_questions.py  guide-v4.csv
backend/docs/: BACKUP_RECOVERY.md  SEED_QUESTIONS.md
backend/models/: question_study.py
backend/routers/: account.py  achievements.py  ai_feedback.py  analytics.py  attempts.py  audit.py  auth.py  bulk_audit_deepseek.py  forms.py  guides.py  play_count.py  question_reports.py  questions.py  recommendations.py  survey.py  tutorials.py  user_check.py  user_performance.py
backend/scripts/: achievements_schema.sql  add_password_hash.sql  add_question_type_column.sql  add_questions_slug.sql  ai_feedback_profile.sql  ai_feedback_usage.sql  ai_usage_rls_fix.sql  ai_usage_rls_update.sql  ai_usage_table.sql  alter_question_studies.sql  csv_to_json.py  dedupe_profiles.sql  (+13 more)
lib/: api.ts  (+19 more)
(+325 files in other folders)
