[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "supabase>=2.0.0",
    "resend>=2.0.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic[email]>=2.5.0",
    "fastapi[standard]>=0.110.0",
    "email-validator>=2.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "python-multipart>=0.0.6",
    "pyjwt>=2.8.0",
    "psycopg2-binary>=2.9.9",
    "gunicorn>=21.2.0"
]

[tool.ruff]
# Legacy code'u tolerant — yeni dosyalarda strict (refactor sırasında düzelt)
line-length = 120
target-version = "py311"
extend-exclude = [
    "data/QUESTIONS*.py",  # 70+ soru dataclass listesi
    "data/SEO_CONTENT.py",  # markdown content
    ".venv",
    "scripts/migrate_to_db.py",  # one-shot migration
]

[tool.ruff.lint]
# Sadece temel syntax + import hataları (legacy ihlalleri ignore)
select = ["E", "F", "I", "B"]
ignore = [
    "E501",  # line too long (data dosyaları uzun)
    "B008",  # function call in default argument (FastAPI Depends pattern)
    "B904",  # raise from exception (legacy code)
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
